[package]
name = "snmp_rs"
version = "0.3.0"
authors = ["Vito Lin <vito.lin.company@gmail.com>"]
description = "Pure-Rust SNMP library with planned support for v1, v2c, v3 (USM/VACM), bulk/walk, trap/inform send & receive."
license = "MIT OR Apache-2.0"
repository = "https://github.com/9-8-7-6/snmp_rs"
documentation = "https://docs.rs/snmp_rs"
readme = "README.md"
keywords = ["snmp", "networking", "monitoring", "rust"]
categories = ["network-programming"]
